// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar > Snapshot 1`] = `
.c0 {
  position: relative;
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 24px;
  height: 24px;
  outline: none;
  margin: 0px;
  background-color: #FFFFFF;
  background-image: var(--background-image);
  background-size: cover;
  border-radius: 42%;
}

@supports (background:paint(smooth-corners)) {
  .c0 {
    padding: 0px;
    margin: 0px;
    background: paint(smooth-corners);
    border-radius: 0;
    box-shadow: none;
    border-image-source: var(--background-image);
    --smooth-corners: 42%;
    --smooth-corners-shadow: 0 0 0 0 transparent;
    --smooth-corners-bg-color: #FFFFFF;
    --smooth-corners-padding: 0;
    --smooth-corners-radius-unit: string;
  }
}

<div
  aria-label="Name"
  class="c0"
  data-testid="bezier-react-avatar"
  role="img"
  size="24"
  style="--background-image: url(https://www.google.com);"
/>
`;

exports[`Avatar > renders border style 1`] = `
.c0 {
  position: relative;
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 24px;
  height: 24px;
  outline: none;
  margin: 0px;
  background-color: #FFFFFF;
  background-image: var(--background-image);
  background-size: cover;
  border-radius: 42%;
}

@supports (background:paint(smooth-corners)) {
  .c0 {
    padding: 4px;
    margin: -4px;
    background: paint(smooth-corners);
    border-radius: 0;
    box-shadow: none;
    border-image-source: var(--background-image);
    --smooth-corners: 42%;
    --smooth-corners-shadow: 0 0 0 2px #FFFFFF;
    --smooth-corners-bg-color: #FFFFFF;
    --smooth-corners-padding: 4;
    --smooth-corners-radius-unit: string;
  }
}

<div
  aria-label="Name"
  class="c0"
  data-testid="bezier-react-avatar"
  role="img"
  size="24"
  style="--background-image: url(https://www.google.com);"
/>
`;

exports[`Avatar > should have right -2px, bottom -2px style on StatusWrapper 1`] = `
.c1 {
  position: relative;
  box-sizing: content-box;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  background-color: var(--bg-white-high);
  border: var(--bezier-status-border-width) solid var(--bg-white-high);
  border-radius: 50%;
}

.c1::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  content: '';
  background-color: var(--bezier-status-bg-color);
  border-radius: 50%;
}

.c0 {
  position: absolute;
  right: -2px;
  bottom: -2px;
}

@supports (background:paint(smooth-corners)) {

}

<div
  class="c0"
  data-testid="bezier-react-status-wrapper"
  size="24"
>
  <div
    class="c1"
    data-testid="bezier-react-status"
    style="--bezier-status-size: 8px; --bezier-status-bg-color: var(--bgtxt-green-normal); --bezier-status-border-width: 2px;"
  />
</div>
`;

exports[`Avatar > should have right 2px, bottom 2px style on StatusWrapper when show border 1`] = `
.c1 {
  position: relative;
  box-sizing: content-box;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  background-color: var(--bg-white-high);
  border: var(--bezier-status-border-width) solid var(--bg-white-high);
  border-radius: 50%;
}

.c1::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  content: '';
  background-color: var(--bezier-status-bg-color);
  border-radius: 50%;
}

.c0 {
  position: absolute;
  right: 2px;
  bottom: 2px;
}

@supports (background:paint(smooth-corners)) {

}

<div
  class="c0"
  data-testid="bezier-react-status-wrapper"
  size="24"
>
  <div
    class="c1"
    data-testid="bezier-react-status"
    style="--bezier-status-size: 8px; --bezier-status-bg-color: var(--bgtxt-green-normal); --bezier-status-border-width: 2px;"
  />
</div>
`;

exports[`Avatar > should have right 4px, bottom 4px style on StatusWrapper when size grater then 72 1`] = `
.c1 {
  position: relative;
  box-sizing: content-box;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  background-color: var(--bg-white-high);
  border: var(--bezier-status-border-width) solid var(--bg-white-high);
  border-radius: 50%;
}

.c1::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  content: '';
  background-color: var(--bezier-status-bg-color);
  border-radius: 50%;
}

.c0 {
  position: absolute;
  right: 4px;
  bottom: 4px;
}

@supports (background:paint(smooth-corners)) {

}

<div
  class="c0"
  data-testid="bezier-react-status-wrapper"
  size="72"
>
  <div
    class="c1"
    data-testid="bezier-react-status"
    style="--bezier-status-size: 8px; --bezier-status-bg-color: var(--bgtxt-green-normal); --bezier-status-border-width: 2px;"
  />
</div>
`;

exports[`Avatar > should have right 4px, bottom 4px style on StatusWrapper when size grater then 90 1`] = `
.c1 {
  position: relative;
  box-sizing: content-box;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  background-color: var(--bg-white-high);
  border: var(--bezier-status-border-width) solid var(--bg-white-high);
  border-radius: 50%;
}

.c1::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  content: '';
  background-color: var(--bezier-status-bg-color);
  border-radius: 50%;
}

.c0 {
  position: absolute;
  right: 4px;
  bottom: 4px;
}

@supports (background:paint(smooth-corners)) {

}

<div
  class="c0"
  data-testid="bezier-react-status-wrapper"
  size="90"
>
  <div
    class="c1"
    data-testid="bezier-react-status"
    style="--bezier-status-size: 14px; --bezier-status-bg-color: var(--bgtxt-green-normal); --bezier-status-border-width: 3px;"
  />
</div>
`;

exports[`Avatar > should have right 8px, bottom 8px style on StatusWrapper when size grater then 72 and show border 1`] = `
.c1 {
  position: relative;
  box-sizing: content-box;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  background-color: var(--bg-white-high);
  border: var(--bezier-status-border-width) solid var(--bg-white-high);
  border-radius: 50%;
}

.c1::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  content: '';
  background-color: var(--bezier-status-bg-color);
  border-radius: 50%;
}

.c0 {
  position: absolute;
  right: 8px;
  bottom: 8px;
}

@supports (background:paint(smooth-corners)) {

}

<div
  class="c0"
  data-testid="bezier-react-status-wrapper"
  size="72"
>
  <div
    class="c1"
    data-testid="bezier-react-status"
    style="--bezier-status-size: 8px; --bezier-status-bg-color: var(--bgtxt-green-normal); --bezier-status-border-width: 2px;"
  />
</div>
`;

exports[`Avatar > should have right 8px, bottom 8px style on StatusWrapper when size grater then 90 and show border 1`] = `
.c1 {
  position: relative;
  box-sizing: content-box;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  background-color: var(--bg-white-high);
  border: var(--bezier-status-border-width) solid var(--bg-white-high);
  border-radius: 50%;
}

.c1::after {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: var(--bezier-status-size);
  height: var(--bezier-status-size);
  content: '';
  background-color: var(--bezier-status-bg-color);
  border-radius: 50%;
}

.c0 {
  position: absolute;
  right: 8px;
  bottom: 8px;
}

@supports (background:paint(smooth-corners)) {

}

<div
  class="c0"
  data-testid="bezier-react-status-wrapper"
  size="90"
>
  <div
    class="c1"
    data-testid="bezier-react-status"
    style="--bezier-status-size: 14px; --bezier-status-bg-color: var(--bgtxt-green-normal); --bezier-status-border-width: 3px;"
  />
</div>
`;
